align to work with spark-4.x and scala 2.13